--- a/src/main/webapp/pages/index.html
+++ b/src/main/webapp/pages/index.html
@@ -50,11 +50,11 @@
      <script type='text/javascript' src='http://getfirebug.com/releases/lite/1.2/firebug-lite-compressed.js'></script>
         
     </head>
-    <body>
+    <body  data-bind="Model">
 				<nav class="navbar navbar-default">
 				  <div class="container-fluid">
 				    <div class="navbar-header">
-				      <a class="navbar-brand" href="#">Javelin</a>
+				      <a class="navbar-brand" href="#">GoGPS</a>
 				    </div>
 				    <div>
 				      <ul class="nav navbar-nav">
@@ -72,7 +72,7 @@
         surname: <span data-bind="text: surname"></span><br/>
         <!--span data-bind="text: Sirtrack.name"></span>
         <span data-bind="text: Sirtrack.surname"></span-->
-        serport name: <span data-bind="text: serport().name"></span><br/>
+        serport name: <span data-bind="text: SerialPort().name"></span><br/>
         <input data-bind="value: message, valueUpdate: 'afterkeydown'">
         <br>
         <button data-bind="enable: !rotating(), click: turnAnimationOn">Start</button>
@@ -80,7 +80,6 @@
         <button data-bind="enable: !rotating(), click: rotate5s">Rotate Few Seconds</button>
         <button data-bind="click: showScreenSize">Screen Size!</button>
         <button data-bind="click: alert">Pop Alert!</button>
-        <div data-bind="Model"></div>
         <div id="scene">
             <span id="words" data-bind="foreach: words">
                 <span data-bind="text: $data, css: { 'rotate' : $root.rotating } "></span>
