--- a/src/main/webapp/pages/index.html
+++ b/src/main/webapp/pages/index.html
@@ -7,7 +7,7 @@
 
 <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
 
-<script type='text/javascript' src='http://getfirebug.com/releases/lite/1.2/firebug-lite-compressed.js'></script>
+<script type='text/javascript' src='http://getfirebug.com/releases/lite/latest/firebug-lite-debug.js'></script>
 <!--script type='text/javascript' src='js/GoGPS.js'></script-->
 <script src="js/jquery-2.1.4.min.js"></script>
 <script src="bootstrap/js/bootstrap.js"></script>
