--- a/src/main/webapp/pages/index.html
+++ b/src/main/webapp/pages/index.html
@@ -32,34 +32,43 @@
 <body>
   <div class="container-fluid">
     <table class="table" data-bind="if: serialPortList().length>0">
-      <thead>
-        <tr>
-        </tr>
-      </thead>
       <tbody>
         <tr>
           <th>Mode</th>
-          <td><select class="form-control"
-            data-bind="options: runModes, optionsText: 'name', value: selectedRunMode"></select></td>
+          <td><select class="form-control" data-bind="options: runModes, optionsText: 'name', value: selectedRunMode"></select>
+          </td>
+          <td></td>
+          <td></td>
         </tr>
         <tr>
           <th>Dynamic Model</th>
-          <td><select class="form-control"
-            data-bind="options: dynModels, optionsText: 'name', value: selectedDynModel"></select></td>
+          <td><select class="form-control" data-bind="options: dynModels, optionsText: 'name', value: selectedDynModel"></select></td>
+          <td></td>
+          <td></td>
         </tr>
-        <tr data-bind="if: serialPortList().length>0" data-bind="if: serialPortList().length>0">
+        <tr>
           <th>Rover</th>
-          <td><select class="form-control"
-            data-bind="options: serialPortList, optionsText: 'name', value:serialPort1"></select></td>
-          <td><select class="form-control"
-            data-bind="options: speedOptions, value: serialPort1().speed"></select></td>
+          <td>
+            <!-- ko foreach: observationProducers -->
+                <input type="radio" data-bind="checkedValue: $data, checked: $root.selectedObservationProducer" />
+                <span data-bind="text: name"></span>
+            <!-- /ko -->
+          </td>
+          <!--td data-bind="if: serialPortList().length>0"><select class="form-control" data-bind="options: serialPortList, optionsText: 'name', value:selectedObservationProducer().serialPort1"></select></td>
+          <td data-bind="if: serialPortList().length>0"><select class="form-control" data-bind="options: speedOptions, value: selectedNavigationProducer().serialPort().speed"></select></td-->
         </tr>
-        <tr data-bind="if: serialPortList().length>1">
+        <tr>
           <th>Navigation</th>
-          <td><select class="form-control"
-            data-bind="options: serialPortList, optionsText: 'name', value: serialPort1"></select></td>
-          <td><select class="form-control"
-            data-bind="options: speedOptions, value: serialPort1().speed"></select></td>
+          <td>
+            <!-- ko foreach: navigationProducers -->
+                <input type="radio" data-bind="checkedValue: $data, checked: $root.selectedNavigationProducer" />
+                <span data-bind="text: name"></span>
+            <!-- /ko -->
+            <!--label class="radio-inline"><input data-bind="enable: serialPortList().length>1" type="radio" name="optradio">Serial</label> 
+            <label class="radio-inline"><input type="radio" name="optradio">Rinex Navigation File</label--> 
+          </td>
+          <td data-bind="if: serialPortList().length>1"><select class="form-control" data-bind="options: serialPortList, optionsText: 'name', value: serialPort1"></select></td>
+          <td data-bind="if: serialPortList().length>1"><select class="form-control" data-bind="options: speedOptions, value: serialPort1().speed"></select></td>
         </tr>
       </tbody>
     </table>
@@ -85,9 +94,9 @@
       Port List</button>
     <div>
       <em><button class="pull-right"
-          data-bind="click: running()? stopUBXxTest : startUBXxTest, 
+          data-bind="click: running()? stop : start, 
 	                             text:  running()? 'stop!' : 'go!' "></button></em>
-    </tr>
-  </div>
+      </tr>
+    </div>
   </div>
 </html>
