--- a/src/main/webapp/pages/index.html
+++ b/src/main/webapp/pages/index.html
@@ -66,7 +66,7 @@
                     <select class="form-control" data-bind="options: $root.speedOptions, value: $data.serialPort().speed"></select>
                 </div>
                 <div class="col-sm-5" data-bind="if: type()=='file'">
-                    <select class="form-control" data-bind="text: filename"></select>
+                    <input class="form-control" data-bind="textInput: filename"></input>
                 </div>
                </div>  
              </div>
@@ -92,12 +92,25 @@
                     <select class="form-control" data-bind="options: $root.speedOptions, value: $data.serialPort().speed"></select>
                  </div>
                  <div class="col-sm-5" data-bind="if: type()=='file'">
-                    <select class="form-control" data-bind="text: filename"></select>
+                    <input class="form-control" data-bind="textInput: filename"></input>
                 </div>                 
+                <div class="col-sm-5" data-bind="if: type()=='ftp'">
+                    GARNER_NAVIGATION_AUTO
+                </div>
              </div>
            </div>
           </div>
      </div>
+      <div class="row  table-bordered">
+          <div class="col-sm-5">
+            <h4>Output Folder</h4>
+          </div>
+          <div class="col-sm-7">
+                <div class="col-sm-5">
+                    <input class="form-control" data-bind="textInput: outputFolder"></input>
+                </div>
+          </div>
+       </div>     
    </div>
   </div>
 </html>
