--- a/src/main/webapp/pages/index.html
+++ b/src/main/webapp/pages/index.html
@@ -101,13 +101,23 @@
            </div>
           </div>
      </div>
-      <div class="row  table-bordered">
+       <div class="row  table-bordered">
           <div class="col-sm-2">
             <h4>Output Folder</h4>
           </div>
           <div class="col-sm-2">
               <input class="form-control" data-bind="textInput: outputFolder"></input>
           </div>
+       </div>     
+       <div class="row ">
+         <div class="col-sm-2">
+            <div data-bind="foreach: satellites">
+                <div class="row  table-bordered" data-bind="if: $data && $data.id">
+                    <div class="col-sm-1">G<span data-bind="text: id()"></span></div>
+                    <div class="col-sm-1"><span data-bind="text: SNR()"></span></div>
+                </div>
+            </div>
+         </div>
        </div>     
    </div>
   </div>
