Remove dindentation in the first row

--- a/src/main/webapp/pages/index.html
+++ b/src/main/webapp/pages/index.html
@@ -29,21 +29,18 @@
     </nav>
     <div class="table">
       <div class="row table-bordered">
-        <div class="col-sm-5  table-bordered">
-          <div class="col-sm-3">
-              <h4>Mode</h4>
-          </div>
-          <div class="col-sm-8 other">
+        <div class="col-sm-1">
+            <h4>Mode</h4>
+        </div>
+          <div class="col-sm-2">
               <select class="form-control" data-bind="options: runModes, optionsText: 'name', value: selectedRunMode" ></select>
           </div>
-        </div>
-        <div class="col-sm-7  table-bordered">
-          <div class="col-sm-5">
+          <div class="col-sm-2"></div>
+          <div class="col-sm-3">
               <h4>Dynamic Model</h4>
           </div>
-          <div class="col-sm-5 other">
+          <div class="col-sm-2">
               <select class="form-control" data-bind="options: dynModels, optionsText: 'name', value: selectedDynModel"></select>
-        </div>
         </div>
       </div>
       <div class="row  table-bordered">
